--- a/modulo2.html
+++ b/modulo2.html
@@ -105,11 +105,14 @@
 
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
+                                <td rowspan=2>Slides</td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo2lista3.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2>Respostas</td>
                                 <td><a href="https://youtu.be/YpxBgYnPNuU">Videoaula 29/08/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/kgRpxfOJGJw">Videoaula 05/09/2015</a></td>
                             </tr>
 
                             <!-- avaliacao 1 -->
