--- a/modulo1.html
+++ b/modulo1.html
@@ -123,7 +123,7 @@
                             <!-- avaliacao 1 -->
                             <tr>
                                 <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
-                                <td rowspan=1>Quest&otilde;es</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1prova1.html">Quest&otilde;es</a></td>
                             </tr>
                             
                             <!-- capitulo 5 -->
