--- a/curso/modulo1prova1.html
+++ b/curso/modulo1prova1.html
@@ -78,10 +78,10 @@
 *******</code></pre>
   <hr/>
   <p>
-   <b>4) TRIÂNGULO EQUILÁTERO (80 pontos)</b> 
+   <b>4) TRIÂNGULO ISÓSCELES (80 pontos)</b> 
   </p>
   <p>
-   Escreva um programa que solicite ao usuário o valor de <em>N</em>, um número natural. <em>N</em> será a altura do triângulo retângulo a ser desenhado na tela pelo seu programa, usando apenas o caractere <em>*</em> (asterisco). Por exemplo, para <em>N = 7</em>, o programa deverá imprimir:
+   Escreva um programa que solicite ao usuário o valor de <em>N</em>, um número natural. <em>N</em> será a altura do triângulo isósceles a ser desenhado na tela pelo seu programa, usando apenas o caractere <em>*</em> (asterisco). Por exemplo, para <em>N = 7</em>, o programa deverá imprimir:
   </p>
   <pre><code>      *
      ***
