--- a/modulo2.html
+++ b/modulo2.html
@@ -73,22 +73,22 @@
                                 <td rowspan=6><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
                                 <td rowspan=6><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=6><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a></td>
-                                <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/QE6Qfl92dc8">Videoaula 04/07/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/QE6Qfl92dc8">Videoaula 04/07/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/hXKksJJx3BQ">Videoaula 11/07/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/hXKksJJx3BQ">Videoaula 11/07/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/f8_8r48Isog">Videoaula 18/07/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/f8_8r48Isog">Videoaula 18/07/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/UZEw1CsvYeg">Videoaula 01/08/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/UZEw1CsvYeg">Videoaula 01/08/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/3SYI9HD3AMs">Videoaula 08/08/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/3SYI9HD3AMs">Videoaula 08/08/2015</a></td>
                             </tr>
 
                             <!-- capitulo 2 -->
@@ -97,10 +97,10 @@
                                 <td rowspan=2><a href="curso/modulo2capitulo2.pptx">Slides</a></td>
                                 <td rowspan=2><a target="_blank" href="curso/modulo2lista2.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=2><a target="_blank" href="curso/modulo2respostas2.html">Respostas</a></td>
-                                <td><a href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/Wf7jv7sFDwU">Videoaula 22/08/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/Wf7jv7sFDwU">Videoaula 22/08/2015</a></td>
                             </tr>
 
                             <!-- capitulo 3 -->
@@ -108,14 +108,17 @@
                                 <td rowspan=3>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
                                 <td rowspan=3><a href="curso/modulo2capitulo3.pptx">Slides</a></td>
                                 <td rowspan=3><a target="_blank" href="curso/modulo2lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=3>Respostas</td>
-                                <td><a href="https://youtu.be/YpxBgYnPNuU">Videoaula 29/08/2015</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo2respostas3.html">Respostas</a></td>
+                                <td><a target="_blank" href="https://youtu.be/YpxBgYnPNuU">Videoaula 29/08/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/kgRpxfOJGJw">Videoaula 05/09/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/kgRpxfOJGJw">Videoaula 05/09/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://youtu.be/RcZIofxZtAU">Videoaula 12/09/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/RcZIofxZtAU">Videoaula 12/09/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="">Videoaula 20/09/2015</a></td>
                             </tr>
 
                             <!-- avaliacao 1 -->
