--- a/curso/modulo1exemplos5.html
+++ b/curso/modulo1exemplos5.html
@@ -180,7 +180,7 @@ do
 {
     Console.WriteLine("Digite um valor a ser inserido no vetor.");
     Console.Write("Para parar de inserir valores no vetor, digite 0: ");
-    valor = Int32.Parse(Console.ReadLine());
+    valor = int.Parse(Console.ReadLine());
 
     if (valor &gt; 0)
     {
@@ -241,7 +241,7 @@ do
 {
     Console.WriteLine("Digite um valor a ser inserido no vetor.");
     Console.Write("Para parar de inserir valores no vetor, digite 0: ");
-    valor = Int32.Parse(Console.ReadLine());
+    valor = int.Parse(Console.ReadLine());
 
     if (valor != 0)
     {
@@ -335,7 +335,7 @@ do
 {
     Console.WriteLine("Digite um valor a ser removido do vetor.");
     Console.Write("Para parar de remover valores, digite 0: ");
-    valor = Int32.Parse(Console.ReadLine());
+    valor = int.Parse(Console.ReadLine());
 
     // BUSCANDO ELEMENTO A SER REMOVIDO
 
