--- a/curso/modulo2lista3.html
+++ b/curso/modulo2lista3.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo II Lista 
+   Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo II Lista 3
   </title>
   <link href="../github.min.css" rel="stylesheet"/>
   <script src="../highlight.min.js">
