--- a/modulo2.html
+++ b/modulo2.html
@@ -118,7 +118,7 @@
                                 <td><a target="_blank" href="https://youtu.be/RcZIofxZtAU">Videoaula 12/09/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="">Videoaula 20/09/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/955C06ibMRY">Videoaula 20/09/2015</a></td>
                             </tr>
 
                             <!-- avaliacao 1 -->
