--- a/curso/modulo2prova1-off.html
+++ b/curso/modulo2prova1-off.html
@@ -46,7 +46,7 @@
    <b>1) ESCRITA DE ALUNOS EM ARQUIVO .CSV (40 pontos)</b>
   </p>
   <p>
-   Para este exercício, você precisará utilizar a biblioteca <em><b>EntradaDeDados.dll</b></em> que criamos no exercício 2.2.10. Se você precisar, você pode baixá-la <a href="EntradaDeDados.dll">aqui</a>.
+   Para este exercício, você precisará utilizar a biblioteca <em><b>EntradaDeDados.dll</b></em> que criamos no exercício 2.2.10. Se você precisar, você pode baixá-la <a href="EntradaDeDados.dll">aqui</a>. Exemplos de uso estão na resposta do exercício 2.2.10 que está na <a target="_blank" href="modulo2respostas2.html">página de respostas do Capítulo 2</a>.
   </p>
   <p>
    Crie uma classe <em><tt>Aluno</tt></em> contendo:
