--- a/modulo2.html
+++ b/modulo2.html
@@ -124,7 +124,7 @@
                             <!-- avaliacao 1 -->
                             <tr>
                                 <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
-                                <td rowspan=1>Quest&otilde;es</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo2prova1.html">Quest&otilde;es</a></td>
                             </tr>
 
                             <!-- capitulo 4 -->
