--- a/curso/modulo2respostas3.html
+++ b/curso/modulo2respostas3.html
@@ -139,7 +139,7 @@ namespace Lista3Exercicio14
             Aluno a;
             int n;
 
-            this.lista = new System.Collections.Generic.List<Aluno>();
+            this.lista = new System.Collections.Generic.List&lt;Aluno&gt;();
 
             try
             {
