--- a/modulo1.html
+++ b/modulo1.html
@@ -128,11 +128,14 @@
                             
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 5 - Vetores</td>
-                                <td rowspan=1>Slides (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 5 - Vetores</td>
+                                <td rowspan=2>Slides (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/AtfE0ZeADSA">Videoaula 20/09/2015</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/vk01rHeCR3Y">Videoaula 03/10/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 6 -->
