--- a/modulo2.html
+++ b/modulo2.html
@@ -130,10 +130,10 @@
                             <!-- capitulo 4 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
-                                <td rowspan=1>Slides</td>
+                                <td rowspan=1><a href="curso/modulo2capitulo4.pptx">Slides</a></td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a target="_blank" href="https://youtu.be/qngqXliyNHs">Videoaula 03/10/2015</a></td>
                             </tr>
 
                             <!-- capitulo 5 -->
