--- a/curso.html
+++ b/curso.html
@@ -40,7 +40,8 @@
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
                 <li><a class="current" href="curso.html" accesskey="2" title="Curso">Curso de Programa&ccedil;&atilde;o C#</a></li>
                 <li><a href="spartacus.html" accesskey="3" title="Spartacus">Biblioteca Spartacus</a></li>
-                <li><a href="sobremim.html" accesskey="4" title="Sobre mim">Sobre mim</a></li>
+                <li><a href="blog.html" accesskey="4" title="Blog">Blog</a></li>
+                <li><a href="sobremim.html" accesskey="5" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
         <hr />
@@ -118,7 +119,6 @@
                             <li>Hangout: d&uacute;vidas, coment&aacute;rios, etc</li>
                             <li>Comunidade: avisos, links, d&uacute;vidas, coment&aacute;rios, divulga&ccedil;&atilde;o, etc</li>
                             <li>Site: slides, exerc&iacute;cios, respostas, links para os v&iacute;deos</li>
-                            <li>Whatsapp: d&uacute;vidas e avisos r&aacute;pidos</li>
                         </ul>
                     </div>
                     <p class="meta">Curitiba, 24 de junho de 2015.</p>
