--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@ make install</code></pre>
 env PATH=/opt/mono/bin:$PATH LD_LIBRARY_PATH=.:bin:$LD_LIBRARY_PATH xsp4 --port 9090</code></pre>
 						<p>9) Agora basta abrir o navegador e digitar 127.0.0.1:9090 para visualizar seu aplicativo ASP.NET rodando.</p>
                     </div>
-                    <p class="meta">Curitiba, 12 de agosto de 2014.</p>
+                    <p class="meta">Curitiba, 26 de outubro de 2015.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
