--- a/modulo1.html
+++ b/modulo1.html
@@ -130,10 +130,10 @@
                             
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=3>Cap&iacute;tulo 5 - Vetores</td>
-                                <td rowspan=3>Slides (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
-                                <td rowspan=3><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=3>Respostas</td>
+                                <td rowspan=4>Cap&iacute;tulo 5 - Vetores</td>
+                                <td rowspan=4><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=4>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/AtfE0ZeADSA">Videoaula 20/09/2015</a></td>
                             </tr>
                             <tr>
@@ -141,6 +141,9 @@
                             </tr>
                             <tr>
                             	<td><a target="_blank" href="https://youtu.be/yrlaGjGyVII">Videoaula 10/10/2015</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/7MAjNo2OrEc">Videoaula 31/10/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 6 -->
