--- a/modulo2.html
+++ b/modulo2.html
@@ -131,14 +131,17 @@
 
                             <!-- capitulo 4 -->
                             <tr>
-                                <td rowspan=2>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
-                                <td rowspan=2><a href="curso/modulo2capitulo4.ppt">Slides</a></td>
-                                <td rowspan=2>Exerc&iacute;cios</td>
-                                <td rowspan=2>Respostas</td>
+                                <td rowspan=3>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
+                                <td rowspan=3><a href="curso/modulo2capitulo4.ppt">Slides</a></td>
+                                <td rowspan=3><a href="curso/modulo2lista4.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=3>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/qngqXliyNHs">Videoaula 03/10/2015</a></td>
                             </tr>
                             <tr>
                             	<td><a target="_blank" href="https://youtu.be/xvSqzCqTWaE">Videoaula 10/10/2015</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/sBDY9cqe1tE">Videoaula 31/10/2015</a></td>
                             </tr>
 
                             <!-- capitulo 5 -->
