Verificacao do Google

--- a/curso.html
+++ b/curso.html
@@ -3,7 +3,8 @@
         <title>William Ivanski - Curso</title>
         
         <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
-        
+
+        <meta name="google-site-verification" content="X4qZK3nXJs4Ddmg6hMPPM-PNokzY_G6T0lAMlpCYKvI" />
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
         <meta name="description" content="" />
