--- a/modulo1.html
+++ b/modulo1.html
@@ -131,10 +131,10 @@
                             
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=4>Cap&iacute;tulo 5 - Vetores</td>
-                                <td rowspan=4><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=4>Respostas</td>
+                                <td rowspan=5>Cap&iacute;tulo 5 - Vetores</td>
+                                <td rowspan=5><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
+                                <td rowspan=5><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=5>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/AtfE0ZeADSA">Videoaula 20/09/2015</a></td>
                             </tr>
                             <tr>
@@ -145,6 +145,9 @@
                             </tr>
                             <tr>
                             	<td><a target="_blank" href="https://youtu.be/7MAjNo2OrEc">Videoaula 31/10/2015</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/odbQ9kTva-Y">Videoaula 07/11/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 6 -->
