--- a/modulo2.html
+++ b/modulo2.html
@@ -151,7 +151,7 @@
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a target="_blank" href="http://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
                             </tr>
 
                             <!-- capitulo 6 -->
