--- a/modulo2.html
+++ b/modulo2.html
@@ -147,11 +147,14 @@
 
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
+                                <td rowspan=2>Slides</td>
+                                <td rowspan=2>Exerc&iacute;cios</td>
+                                <td rowspan=2>Respostas</td>
                                 <td><a target="_blank" href="http://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://youtu.be/Q9SHSWEOmxI﻿">Videoaula 14/11/2015</a></td>
                             </tr>
 
                             <!-- capitulo 6 -->
