--- a/modulo1.html
+++ b/modulo1.html
@@ -134,7 +134,7 @@
                                 <td rowspan=5>Cap&iacute;tulo 5 - Vetores</td>
                                 <td rowspan=5><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
                                 <td rowspan=5><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=5>Respostas</td>
+                                <td rowspan=5><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://youtu.be/AtfE0ZeADSA">Videoaula 20/09/2015</a></td>
                             </tr>
                             <tr>
@@ -153,10 +153,10 @@
                             <!-- capitulo 6 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 6 - Matrizes</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a href="curso/modulo1capitulo6.ppt">Slides</a> (<a target="_blank" href="curso/modulo1exemplos6.html">Exemplos</a>)</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a target="_blank" href="https://youtu.be/xW4FyeJOA74﻿">Videoaula 14/11/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 7 -->
