--- a/modulo2.html
+++ b/modulo2.html
@@ -134,7 +134,7 @@
                             <tr>
                                 <td rowspan=3>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
                                 <td rowspan=3><a href="curso/modulo2capitulo4.ppt">Slides</a></td>
-                                <td rowspan=3><a href="curso/modulo2lista4.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo2lista4.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=3>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/qngqXliyNHs">Videoaula 03/10/2015</a></td>
                             </tr>
@@ -149,7 +149,7 @@
                             <tr>
                                 <td rowspan=2>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
                                 <td rowspan=2><a href="curso/modulo2capitulo5.ppt">Slides</a></td>
-                                <td rowspan=2><a href="curso/modulo2lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo2lista5.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=2>Respostas</td>
                                 <td><a target="_blank" href="http://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
                             </tr>
